--- a/style.css
+++ b/style.css
@@ -88,3 +88,10 @@ body {
   color: white;
   cursor: pointer;
 }
+
+.avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
